# like-games

./: .gitignore
backend/services/c++/like/: CMakeLists.txt  Dockerfile
backend/services/c++/like/cmake/: CPM.cmake
backend/services/c++/like/src/: data_structure.hpp  texas_holdem.hpp
backend/services/c++/like/src/poker/card/: card.hpp  cardset.hpp  hand.hpp  rank.hpp  suit.hpp
backend/services/poker/: pyproject.toml
backend/services/poker/app/: main.py
backend/services/poker/app/core/: config.py
backend/services/poker/app/db/: session.py
backend/services/poker/app/logic/cards/: deck.py
backend/services/poker/app/orm/: __init__.py  card.py  game.py  player.py
backend/services/poker/app/orm/card/: __init__.py  card.py  deck.py
backend/services/poker/app/orm/game/: __init__.py  game.py  session.py
backend/services/poker/app/orm/player/: __init__.py  player.py  user.py
backend/services/poker/app/schemas/game/: __init__.py
backend/services/poker/app/schemas/integration/: __init__.py
backend/services/poker/app/store/: store.py
backend/services/poker/app/store/aiohttp_session/: accessor.py
backend/services/poker/app/store/integration/: __init__.py
backend/services/poker/app/structures/: constants.py  enums.py  named_tuples.py
backend/services/poker/app/structures/_game/: game.py
backend/services/poker/app/structures/exceptions/: __init__.py
backend/services/poker/app/utils/decorators/: __init__.py  admin.py  game.py
backend/services/poker/app/utils/ws/: _answer.py
backend/services/pot/: Dockerfile  Dockerfile.migrations  pyproject.toml
backend/services/pot/alembic/: env.py
backend/services/pot/alembic/versions/: 021a6b83b644_migrations.py  21d84825236e_migrations.py  8cb14ac8b21f_migrations.py  f6d7c2ae1a51_migrations.py
backend/services/pot/app/: main.py
backend/services/pot/app/accessors/integration/: users.py
backend/services/pot/app/api/: api.py
backend/services/pot/app/api/v1/: __init__.py  v1.py
backend/services/pot/app/api/v2/: __init__.py  v2.py
backend/services/pot/app/core/: config.py  depends.py  handlers.py  middlewares.py
backend/services/pot/app/db/: base.py  session.py
backend/services/pot/app/orm/: __init__.py  pot.py
backend/services/pot/app/orm/pot/: __init__.py  pot.py
backend/services/pot/app/orm/user/: __init__.py  user.py
backend/services/pot/app/responses/: bad.py
backend/services/pot/app/schemas/: pot.py
backend/services/pot/app/schemas/integration/: __init__.py  user.py
backend/services/pot/app/store/: __init__.py  store.py
backend/services/pot/app/store/aiohttp_session/: accessor.py
backend/services/pot/app/store/integration/: __init__.py
backend/services/pot/app/store/pot/: accessor.py
backend/services/pot/app/structures/: enums.py
backend/services/pot/app/utils/: admin.py  backend.py  token.py
backend/services/pot/app/utils/decorators/: __init__.py  admin.py
backend/services/profile/: Dockerfile  pyproject.toml
backend/services/profile/app/: main.py
backend/services/profile/app/accessors/integration/: users.py
backend/services/profile/app/core/: depends.py  handlers.py  tools.py
backend/services/profile/app/orm/: profile.py
backend/services/profile/app/responses/: okay.py
backend/services/profile/app/structures/: enums.py  named_tuples.py
backend/services/python/chat/: pyproject.toml
backend/services/python/chat/app/: main.py
backend/services/python/chat/app/accessors/: message.py  user.py
backend/services/python/chat/app/api/: __init__.py
backend/services/python/chat/app/core/: config.py
backend/services/python/chat/app/structures/: enums.py
backend/services/telegram/: Dockerfile  pyproject.toml
backend/services/telegram/app/: main.py
backend/services/telegram/app/accessors/integration/: pot.py  users.py
backend/services/telegram/app/api/: __init__.py  api.py
backend/services/telegram/app/api/private/: __init__.py  private.py
backend/services/telegram/app/core/: config.py  depends.py  middlewares.py
backend/services/telegram/app/db/: session.py
backend/services/telegram/app/handlers/private/: __init__.py  pot.py
backend/services/telegram/app/misc/: bot.py
backend/services/telegram/app/orm/: user.py
backend/services/telegram/app/orm/pot/: bonus.py
backend/services/telegram/app/schemas/integration/: pot.py  user.py
backend/services/telegram/app/store/: __init__.py  store.py
backend/services/telegram/app/store/integration/: __init__.py
backend/services/telegram/app/store/pot/: __init__.py
backend/services/telegram/app/store/user/: accessor.py
backend/services/telegram/app/utils/: param_functions.py
backend/services/telegram/app/utils/pot/: bonus.py
backend/services/user/: Dockerfile  Dockerfile.migrations  pyproject.toml
backend/services/user/alembic/: env.py
backend/services/user/alembic/versions/: 1d49e04e6ac3_migrations.py  3ee3b47bee78_added_initial_tables.py  4eb4a380d4e7_migrations.py  4f975c9f3978_migrations.py  d8780d521a87_migrations.py
backend/services/user/app/: main.py
backend/services/user/app/accessors/: user.py
backend/services/user/app/api/: __init__.py
backend/services/user/app/api/v1/: __init__.py  v1.py
backend/services/user/app/api/v2/: __init__.py  v2.py
backend/services/user/app/core/: config.py  depends.py  handlers.py  settings.py
backend/services/user/app/orm/: user.py
backend/services/user/app/orm/user/: user.py
backend/services/user/app/responses/: bad.py  json.py  okay.py
backend/services/user/app/schemas/: user.py
backend/services/user/app/schemas/integration/: __init__.py
backend/services/user/app/store/: __init__.py  base.py  store.py
backend/services/user/app/store/user/: accessor.py
backend/services/user/app/structures/: enums.py
backend/services/user/app/structures/exceptions/: __init__.py
backend/services/user/app/structures/telegram/: errors.py
backend/services/user/app/utils/: admin.py  auth.py  backend.py  telegram.py  token.py
backend/services/user/app/utils/decorators/: __init__.py  auth.py
(+172 files in other folders)
