[tool.poetry]
name = "user"
version = "0.1.0"
description = ""
authors = ["copper-boy <sermed512@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.2"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
pydantic = {extras = ["email"], version = "^1.10.2"}
fastapi-jwt-auth = "^0.5.0"
sqlalchemy = "^1.4.42"
asyncpg = "^0.27.0"
alembic = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
